# varguid-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  FIX_LOG_0.1.8.md  MANIFEST.in  PUBLICATION_CHECKLIST.md  PUBLICATION_METADATA_LOG_0.1.8.md  PUBLICATION_VALIDATION_LOG_0.1.8.txt  README.md  RELEASING.md  VALIDATION_LOG_0.1.8.txt  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
docs/: index.md
src/varguid/: __init__.py  datasets.py  model.py
src/varguid/data/: cobra2d.csv
tests/: test_basic.py  test_examples.py  test_r_compatibility.py  test_sklearn.py  test_validation.py
tests/benchmarks/: README.md  benchmark_statsmodels.py
