[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varguid"
version = "0.1.8"
description = "{varguid}: Variance-Guided Regression Improving Upon OLS and ANOVA for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [
  {name = "Zihao Wang", email = "zxw832@miami.edu"},
  {name = "Min Lu", email = "luminwin@gmail.com"}
]
maintainers = [
  {name = "Zihao Wang", email = "zxw832@miami.edu"}
]
keywords = ["regression", "heteroscedasticity", "mean-variance", "weighted least squares", "lasso"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.1",
  "pandas>=2.3",
  "scipy>=1.15",
  "scikit-learn>=1.6",
  "statsmodels>=0.14.4",
  "patsy>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "check-manifest>=0.50",
  "coverage[toml]>=7.6",
  "mypy>=1.16",
  "nox>=2024.10.9",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.12",
  "twine>=6.1"
]
docs = [
  "myst-parser>=4.0",
  "sphinx>=8.1"
]

[project.urls]
Homepage = "https://github.com/zionwzz/varguid-python"
Repository = "https://github.com/zionwzz/varguid-python"
"Bug Tracker" = "https://github.com/zionwzz/varguid-python/issues"
Changelog = "https://github.com/zionwzz/varguid-python/blob/main/CHANGELOG.md"
"Software DOI" = "https://doi.org/10.5281/zenodo.20816141"
"Method Paper" = "https://doi.org/10.1002/sim.70632"
"R Package" = "https://github.com/luminwin/varGuid"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["varguid*"]

[tool.setuptools.package-data]
"varguid" = ["data/*.csv", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-ra", "--strict-markers"]
markers = [
  "benchmark: validation scripts against reference implementations",
]

[tool.coverage.run]
source = ["varguid"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/varguid/model.py" = ["N803", "N806", "N815"]
"tests/**/*.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = ["src", "tests"]
